Moves database values in Portus helm chart back to Portus section

--- a/contrib/helm-charts/Portus/templates/portus-secret.yaml
+++ b/contrib/helm-charts/Portus/templates/portus-secret.yaml
@@ -10,7 +10,7 @@ metadata:
 type: Opaque
 data:
   PORTUS_PASSWORD: {{ .Values.portus.password | quote }}
-  PORTUS_PRODUCTION_PASSWORD: {{ .Values.mariadb.mariadbRootPassword | b64enc | quote }}
+  PORTUS_PRODUCTION_PASSWORD: {{ .Values.portus.productionPassword | quote }}
   PORTUS_SECRET_KEY_BASE: {{ .Values.portus.secretKeyBase | quote }}
 
   key: |
