--- a/contrib/helm-charts/Portus/requirements.yaml
+++ b/contrib/helm-charts/Portus/requirements.yaml
@@ -2,3 +2,4 @@ dependencies:
   - name: mariadb 
     version: 2.0.1 
     repository: https://kubernetes-charts.storage.googleapis.com/
+    condition: mariadb.enabled
