--- a/contrib/helm-charts/Portus/templates/portus-configmap.yaml
+++ b/contrib/helm-charts/Portus/templates/portus-configmap.yaml
@@ -12,9 +12,10 @@ data:
   {{- if .Values.mariadb.enabled }}
   PORTUS_PRODUCTION_HOST: "{{ .Release.Name }}-mariadb"
   {{- else }}
-  PORTUS_PRODUCTION_HOST: {{ .Values.mariadb.name | quote }}
+  PORTUS_PRODUCTION_HOST: {{ .Values.portus.productionHost | quote }}
   {{- end }}
-  PORTUS_PRODUCTION_DATABASE: {{ .Values.mariadb.mariadbDatabase | quote }}
+  PORTUS_PRODUCTION_DATABASE: {{ .Values.portus.productionDatabase | quote }}
+  PORTUS_PRODUCTION_USERNAME: {{ .Values.portus.productionUsername | quote }}
   PORTUS_KEY_PATH: "/certificates/portus.key"
   PORTUS_CERT_PATH: "/certificates/portus.crt"
   PORTUS_CHECK_SSL_USAGE_ENABLED: "true" 
