--- a/contrib/helm-charts/Portus/values.yaml
+++ b/contrib/helm-charts/Portus/values.yaml
@@ -18,10 +18,16 @@ portus:
   fqdnValue: "portus-test.us.to" # TODO: this needs to be abstracted
   railsServeStaticFiles: true 
 
+  ## Database values
+  ##
+  productionHost:                    # name of database host, only used if connecting to separate mariadb deployment
+  productionDatabase: "portus"       # name of database
+  productionUsername: "root"         # database user
+  productionPassword: "cGFzc3dvcmQ=" # database password
+
   ## Secret values for Portus.
   ## 
   password: "cGFzc3dvcmQ="         
-  productionPassword: "cGFzc3dvcmQ="
   secretKeyBase:  "YjQ5NGEyNWZhYThkMjJlNDMwZTg0M2UyMjBlNDI0ZTEwYWM4NGQyY2UwZTY0MjMxZjViNjM2ZDIxMjUxZWI2ZDI2N2FkYjA0MmFkNTg4NGNiZmYwZjM4OTFiY2Y5MTFiZGY4YWJiM2NlNzE5ODQ5Y2NkYTlhNDg4OTI0OWU1YzI="
  
 ## Default values for Crono. 
@@ -70,16 +76,13 @@ mariadb:
   ##
   enabled: true
 
-  ## If using your own Mariadb deployment, provide the name of the service here
-  ##
-  # name:
-
   persistence:
     enabled: false
     accessMode: "ReadWriteOnce"
     size: "8Gi"
 
   ## Configuration values for Mariadb.
+  ## must match Portus database values.
   ##
   usePassword: true
   mariadbRootPassword: "password"
