--- a/contrib/helm-charts/Portus/templates/crono-deployment.yaml
+++ b/contrib/helm-charts/Portus/templates/crono-deployment.yaml
@@ -54,11 +54,19 @@ spec:
                 configMapKeyRef:
                   name: "{{ .Release.Name }}-{{ .Values.portus.name }}"
                   key: PORTUS_PRODUCTION_USERNAME
+            {{- if .Values.mariadb.enabled }}
             - name: PORTUS_PRODUCTION_PASSWORD
               valueFrom:
-                secretKeyRef: 
+                secretKeyRef:
+                  name: {{ template "mariadb.fullname" . }}
+                  key: mariadb-password
+            {{- else }}
+            - name: PORTUS_PRODUCTION_PASSWORD
+              valueFrom:
+                secretKeyRef:
                   name: "{{ .Release.Name }}-{{ .Values.portus.name }}"  
                   key: PORTUS_PRODUCTION_PASSWORD
+            {{- end }}
             - name: PORTUS_KEY_PATH
               valueFrom:
                 configMapKeyRef: 
